3/3/19
    - Misc fix with Avatars
    - Minimap icons should all scale with zoom level
    - Loftar map debug messages no longer print to system chat..
    - Bug with pointers
    - Custom markers are now a separate category in the marker list. They can be renamed and recolored now.
    - Added back unknown gobs icon to the minimap

3/2/19
    - Belts will now save window position
    - Locking a window will be remember like position now
    - Added Omni's sound file
    - Can now left/right click gobs on Loftar's map like you can on minimap
    - Changed how hover tooltips worked for the 3D world. It's no longer ctrl + hover. There is now a setting that
    toggles it on/off under Gameplay -> "Show Hover Tooltips". You can also toggle with Shift+V
    - You now move Loftar's map around with ctrl + drag, just like the minimap. You can now move on it with just left click
    rather than ctrl + left click. Queued moves are still alt + left click. Icons won't stop alt + left click anymore
    - Loftar's map will now show grid lines when on as well as player's view distance
    - Loftar's map is restricted to 5 zoomlevels
    - Loftar's map will now show ridges. Note that it may take awhile for the other zoom levels to update with ridges..
    - Changed out zoom maps load in from Loftar's map so if the default grid level has updated all the zoommaps that
    depend on it should update as well with the new data. You'll notice your zoom maps load in slightly delayed because
    of this as they have to regenerate.
    - Moved minimap buttons over to Loftar's map
    - Split up Loftar's map into the map and a markers window. You can open the markers window with the flag button at
    the top of the map window or by clicking an item as usual.
    - The old minimap no longer exists. Loftar's map can do everything it could and more now.
    - Caves will now automatically mark on Loftar's map, it's under "Natural" in the lists, will be expanded on later on