@@ -5,6 +5,7 @@
     - Bug with pointers
     - Custom markers are now a separate category in the marker list. They can be renamed and recolored now.
     - Added back unknown gobs icon to the minimap
+    - Minimap should no longer blip black when rendering an update to it
 
 3/2/19
     - Belts will now save window position
